@@ -7,6 +7,7 @@
 - 2020-12-06                                -
 ---------------------------------------------
 .: WSW: Task: Update twitter meta (WSW-84)
+.: WSM: Task: Update autocomplete api (WSW-93)
 
 ---------------------------------------------
 - 2020-12-05                                -
